--- a/_data/pageconfig/our-solutions.yml
+++ b/_data/pageconfig/our-solutions.yml
@@ -1,5 +1,5 @@
 site_url: https://axopstech.github.io
-tagline_intro: AxOps&#8482; Solutions Overview
+tagline_intro: AxOps Solutions Overview
 tagline_here: Solutions
 tagline_href: /solutions
 tagline_main: Unlock Your Organisation's Digital Transformation
