--- a/_data/pageconfig/partners.yml
+++ b/_data/pageconfig/partners.yml
@@ -1,5 +1,5 @@
 tagline_intro: Our Technology Partners
-tagline_main: AxOps™ engages select IT vendors to augment our services &#129309;
+tagline_main: AxOps engages select IT vendors to augment our services &#129309;
 #site_url: https://localhost:4000
 site_url: https://axopstech.github.io
 members:
