--- a/_data/pageconfig/our-technologies.yml
+++ b/_data/pageconfig/our-technologies.yml
@@ -1,6 +1,6 @@
 tagline_intro: Supported Technologies
 tagline_here: Technologies
-tagline_main: Accelerate Innovation with AxOps™
+tagline_main: Accelerate Innovation with AxOps
 #site_url: https://localhost:4000
 site_url: https://axopstech.github.io
 members:
