--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ exclude:
 #url: http://localhost:4000
 #url: https://axopstech.github.io
 url: https://www.axops.tech
-title: AxOps
+title: AxOps Technology Services
 subtitle: "Technology, Consultancy, and Training Services"
 address: Calle Juan Urbieta, 16, 1ºA, 28007, Madrid - Spain.
 email: 
