--- a/_data/pageconfig/index.yml
+++ b/_data/pageconfig/index.yml
@@ -17,7 +17,10 @@ tagline_dynamic_delay: 100
 #tagline_cta: Paying too much for too little? Need to modernise your organisation? Considering the Cloud but lack the in-house expertise?
 #tagline_cta: Paying too much for too little? Need to modernise your systems? Considering the Cloud but lack the expertise?
 #tagline_cta: Paying too much for too little? Need to modernise your IT systems? Considering the Cloud but lack the in-house expertise?
-tagline_cta: Underutilising resources? Need to modernise your IT systems? Lacking expertise for Cloud adoption?
+#tagline_cta: Underutilising resources? Need to modernise your IT systems? Lacking expertise for Cloud adoption?
+#tagline_cta: Future-proof your business with modern data architectures and bespoke AI/ML solutions.
+#tagline_cta: We help future-proof your business with bespoke data infrastructure and AI/ML solutions.
+tagline_cta: We help future-proof your business with bespoke data infrastructure and intelligent systems.
 
 button_cta1_text: Solutions
 button_cta1_url: /solutions
