--- a/_data/pageconfig/our-technology-consulting-solutions.yml
+++ b/_data/pageconfig/our-technology-consulting-solutions.yml
@@ -31,7 +31,7 @@ members:
     image_srcset: &site_url /assets/img/illustrations/custom/solutions-crm-data-integrations.jpg 2x
     url: &site_url /solutions/technology-consulting/crm-data-integrations
     role: How we work with clients &#129309;
-    enabled: true
+    enabled: false
   -
     name: Data Management
     image_src: &site_url /assets/img/illustrations/custom/solutions-hubspot-crm-optimisation.jpg
