--- a/_data/pageconfig/index.yml
+++ b/_data/pageconfig/index.yml
@@ -20,7 +20,8 @@ tagline_dynamic_delay: 100
 #tagline_cta: Underutilising resources? Need to modernise your IT systems? Lacking expertise for Cloud adoption?
 #tagline_cta: Future-proof your business with modern data architectures and bespoke AI/ML solutions.
 #tagline_cta: We help future-proof your business with bespoke data infrastructure and AI/ML solutions.
-tagline_cta: We help future-proof your business with bespoke data infrastructure and intelligent systems.
+#tagline_cta: We help future-proof your business with bespoke data infrastructure and intelligent systems.
+tagline_cta: We help future-proof your business with bespoke data infrastructure and intelligence solutions.
 
 button_cta1_text: Solutions
 button_cta1_url: /solutions
