minor updates to team and site creatives

--- a/_data/pageconfig/team.yml
+++ b/_data/pageconfig/team.yml
@@ -1,6 +1,6 @@
 tagline_intro: The AXOPS Team
 #tagline_main: Our battle-tested, multi-disciplinary team of consultants
-tagline_main: "Consultants specialized in complex data technology domains"
+tagline_main: "International consultants specialized in complex data technology domains"
 tagline_here: The Team
 site_url: https://axopstech.github.io
 members:
