--- a/_data/pageconfig/index.yml
+++ b/_data/pageconfig/index.yml
@@ -24,7 +24,7 @@ tagline_dynamic_delay: 100
 tagline_cta: We help future-proof your business with bespoke data infrastructure and intelligence solutions.
 
 button_cta1_text: Solutions
-button_cta1_url: /technologies
+button_cta1_url: /solutions
 
 button_cta2_text: Case Studies
 button_cta2_url: /case-studies
@@ -41,10 +41,10 @@ above_the_fold_images:
   left-bottom-srcset: ./assets/img/illustrations/home/left-bottom-cloud-data-analytics@2x.jpg 2x
   middle: ./assets/img/illustrations/home/middle-future-proof-data-infrastructure-intelligence-solutions.jpg
   middle-srcset: ./assets/img/illustrations/home/middle-future-proof-data-infrastructure-intelligence-solutions@2x.jpg 2x
-  right-top: ./assets/img/illustrations/home/right-top-systems-integration.jpg
-  right-top-srcset: ./assets/img/illustrations/home/right-top-systems-integration@2x.jpg 2x
-  right-middle: ./assets/img/illustrations/home/right-middle-cloud-data-architecture.jpg
-  right-middle-srcset: ./assets/img/illustrations/home/right-middle-cloud-data-architecture@2x.jpg 2x
+  right-top: ./assets/img/illustrations/training/right-top-quantitative-development.jpg
+  right-top-srcset: ./assets/img/illustrations/training/right-top-quantitative-development@2x.jpg 2x
+  right-middle: ./assets/img/illustrations/training/right-middle-quantitative-research.jpg
+  right-middle-srcset: ./assets/img/illustrations/training/right-middle-quantitative-research@2x.jpg 2x
   right-bottom: ./assets/img/illustrations/home/right-bottom-devops-architecture.jpg
   right-bottom-srcset: ./assets/img/illustrations/home/right-bottom-devops-architecture@2x.jpg 2x
 
