--- a/_data/pageconfig/navigation.yml
+++ b/_data/pageconfig/navigation.yml
@@ -11,126 +11,6 @@
   url: /solutions
   current: false
   enabled: true
-  has_children: false
-  multi_column: false
-  has_subchildren: false
-  is_mega_dropdown: true
-  children:
-    -
-      name: Technology Consulting
-      url: /technology-consulting
-      enabled: true
-      children:
-        -
-          name: Cloud Services
-          url: /cloud-services
-          enabled: true
-          hard_href: /technologies/cloud-services
-        -
-          name: Data Management
-          url: /data-management
-          enabled: true
-          hard_href: /technologies/data-management
-        -
-          name: Business Analytics
-          url: /business-analytics
-          enabled: false
-          hard_href: /technologies/business-analytics
-        -
-          name: CRM Data Integrations
-          url: /crm-data-integrations
-          enabled: false
-        -
-          name: Application Engineering
-          url: /application-engineering
-          enabled: true
-          hard_href: /technologies/application-engineering
-        -
-          name: CRM Data Migrations
-          url: /crm-data-migrations
-          enabled: false
-        -
-          name: Digital Transformation
-          url: /digital-transformation
-          enabled: false
-        -
-          name: Bespoke CRM Solutions
-          url: /bespoke-crm-solutions
-          enabled: false
-        -
-          name: Application Engineering
-          url: /application-engineering
-          enabled: false
-        -
-          name: Blockchain Solutions
-          url: /blockchain-solutions
-          enabled: false
-        -
-          name: Salesforce Development
-          url: /salesforce-development
-          enabled: false
-        -
-          name: HubSpot CRM Optimisation
-          url: /hubspot-crm-optimisation
-          enabled: false
-
-    -
-      name: Technical Training
-      url: /technical-training
-      enabled: true
-      children:
-        -
-          name: DevOps Engineering
-          url: "#devops-engineering"
-          enabled: true
-        -
-          name: Blockchain Development
-          url: "#blockchain-development"
-          enabled: false
-        -
-          name: Event-Driven Architecture
-          url: "#event-driven-architecture"
-          enabled: true
-        -
-          name: Infrastructure Automation
-          url: "#infrastructure-automation"
-          enabled: true
-        -
-          name: Monitoring & Observability
-          url: "#monitoring-observability"
-          enabled: false
-    -
-      name: Quantitative R&D Training
-      url: /quantitative-training
-      enabled: true
-      children:
-        -
-          name: Quantitative Research
-          url: "#quantitative-research"
-          enabled: true
-        -
-          name: Quantitative Development
-          url: "#quantitative-development"
-          enabled: true
-    -
-      name: Strategic Advisory
-      url: /strategic-advisory
-      enabled: false
-      children:
-        -
-          name: Project Management
-          url: /project-management
-          enabled: true
-        -
-          name: Workforce Optimisation
-          url: /workforce-optimisation
-          enabled: true
-          
--
-  name: Technologies
-  url: /technologies
-  current: false
-  enabled: true
   has_children: true
   multi_column: false
   has_subchildren: false
@@ -220,6 +100,128 @@
         -
           name: Predictive Analytics
           url: '#predictive-analytics-solutions'
+          enabled: true
+
+-
+  name: Technical Training
+  url: /solutions
+  current: false
+  enabled: true
+  has_children: true
+  multi_column: true
+  has_subchildren: false
+  is_mega_dropdown: false
+  children:
+    -
+      name: Technology Consulting
+      url: /technology-consulting
+      enabled: false
+      children:
+        -
+          name: Cloud Services
+          url: /cloud-services
+          enabled: true
+          hard_href: /technologies/cloud-services
+        -
+          name: Data Management
+          url: /data-management
+          enabled: true
+          hard_href: /technologies/data-management
+        -
+          name: Business Analytics
+          url: /business-analytics
+          enabled: false
+          hard_href: /technologies/business-analytics
+        -
+          name: CRM Data Integrations
+          url: /crm-data-integrations
+          enabled: false
+        -
+          name: Application Engineering
+          url: /application-engineering
+          enabled: true
+          hard_href: /technologies/application-engineering
+        -
+          name: CRM Data Migrations
+          url: /crm-data-migrations
+          enabled: false
+        -
+          name: Digital Transformation
+          url: /digital-transformation
+          enabled: false
+        -
+          name: Bespoke CRM Solutions
+          url: /bespoke-crm-solutions
+          enabled: false
+        -
+          name: Application Engineering
+          url: /application-engineering
+          enabled: false
+        -
+          name: Blockchain Solutions
+          url: /blockchain-solutions
+          enabled: false
+        -
+          name: Salesforce Development
+          url: /salesforce-development
+          enabled: false
+        -
+          name: HubSpot CRM Optimisation
+          url: /hubspot-crm-optimisation
+          enabled: false
+
+    -
+      name: Cloud Engineering
+      url: /technical-training
+      enabled: true
+      children:
+        -
+          name: DevOps Engineering
+          url: "#devops-engineering"
+          enabled: true
+        -
+          name: Blockchain Development
+          url: "#blockchain-development"
+          enabled: false
+        -
+          name: Event-Driven Architecture
+          url: "#event-driven-architecture"
+          enabled: true
+        -
+          name: Infrastructure Automation
+          url: "#infrastructure-automation"
+          enabled: true
+        -
+          name: Monitoring & Observability
+          url: "#monitoring-observability"
+          enabled: false
+    
+    -
+      name: Quantitative R&D
+      url: /quantitative-training
+      enabled: true
+      children:
+        -
+          name: Quantitative Research
+          url: "#quantitative-research"
+          enabled: true
+        -
+          name: Quantitative Development
+          url: "#quantitative-development"
+          enabled: true
+    
+    -
+      name: Strategic Advisory
+      url: /strategic-advisory
+      enabled: false
+      children:
+        -
+          name: Project Management
+          url: /project-management
+          enabled: true
+        -
+          name: Workforce Optimisation
+          url: /workforce-optimisation
           enabled: true
         
 -
